...
              testID={`${testIDPrefix}-no-wallet`}
            />
          </View>
        ) : (
          <>
            <RefreshableFlatList<ListRow>
              testID="list-transactions"
              data={rows}
              keyExtractor={(row) => (typeof row === 'string' ? row : row.day)}
              stickyHeaderIndices={[rows.indexOf('filter')]}
              renderItem={({ item: row }) =>
                row === 'summary' ? (
                  summary
...
